

syntax="proto3";
option java_multiple_files = true;
option java_package = "cn.atali.usercenter";
option java_outer_classname = "WebSiteProto";
option objc_class_prefix = "WEBSITESRV";
package usercenter;
option go_package = "./;usercenter";

import "common.proto";

service WebSite{
    rpc Add(WebSiteInfo)returns(CommonResponse){}
    rpc Update(WebSiteInfo)returns(CommonResponse){}
    rpc Delete(DelRequest)returns(CommonResponse){}
    rpc Query(QueryWebSiteRequest)returns(QueryWebSiteResponse){}
    rpc GetAll(GetAllRequest)returns(GetAllWebSiteResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetWebSiteDetailResponse){}
    rpc Export(CommonExportRequest)returns(CommonExportResponse){}
}

message WebSiteInfo {
    string id=1;
	//网站名称 
 	string name=2;
	//网站编号 
 	string code=3;
	//网站Logo 
 	string logo=4;
	//所属项目 
 	string projectID=5;
	//租户ID 
 	string tenantID=6;
    //系统必须要有的数据
    bool isMust=7;
}




message QueryWebSiteRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"orderField" form:"orderField"
    string orderField=3;
    // @inject_tag: uri:"desc" form:"desc"
    bool desc=4;
	//网站名称 
    // @inject_tag: uri:"name" form:"name"
    string name=5;
	//网站编号 
    // @inject_tag: uri:"code" form:"code"
    string code=6;
	//所属项目 
    // @inject_tag: uri:"projectID" form:"projectID"
    string projectID=8;
	//租户ID 
    // @inject_tag: uri:"tenantID" form:"tenantID"
    string tenantID=9;
    // @inject_tag: uri:"isMust" form:"isMust"
    bool isMust=10;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=11;
}

message QueryWebSiteResponse{
    Code code=1;
    string message=2;
    repeated WebSiteInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllWebSiteResponse{
    Code code=1;
    string message=2;
    repeated WebSiteInfo data=3;
}

message GetWebSiteDetailResponse{
    Code code=1;
    string message=2;
    WebSiteInfo data=3;
}